defined structure of the introduction section

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,16 +1,120 @@
-@online{swi,
-	title = {{SWI-Prolog}},
-	url = {https://www.swi-prolog.org/},
-	urldate = {\today}
+@article{GreenAlgorithms,
+author = {Lannelongue, Loïc and Grealey, Jason and Inouye, Michael},
+title = {Green Algorithms: Quantifying the Carbon Footprint of Computation},
+journal = {Advanced Science},
+volume = {8},
+number = {12},
+pages = {2100707},
+keywords = {climate change, computational research, green computing},
+doi = {https://doi.org/10.1002/advs.202100707},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/advs.202100707},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/advs.202100707},
+year = {2021}
 }
 
-@article{wielemaker2012swi,
-	title={Swi-prolog},
-	author={Wielemaker, Jan and Schrijvers, Tom and Triska, Markus and Lager, Torbj{\"o}rn},
-	journal={Theory and Practice of Logic Programming},
-	volume={12},
-	number={1-2},
-	pages={67--96},
-	year={2012},
-	publisher={Cambridge University Press}
+@online{OpenAIblog,
+    author = {Dario Amodei, Danny Hernandez},
+    title = {AI and compute},
+    url  = {https://openai.com/index/ai-and-compute/},
+    addendum = {accessed: 30.10.2024},
+    year = {2018},
+    publisher = {OpenAI},
+    keywords = {OpenAI,Compute,Amodei}
+}
+
+@article{Taddeo2021,
+  title = {Artificial intelligence and the climate emergency: Opportunities, challenges, and recommendations},
+  author = {Taddeo, Mariarosaria and Tsamados, Andreas and Cowls, Josh and Floridi, Luciano},
+  year = {2021},
+  journal = {One Earth},
+  volume = {4},
+  number = {6},
+  pages = {776--779},
+  doi = {10.1016/j.oneear.2021.05.018},
+  url = {https://doi.org/10.1016/j.oneear.2021.05.018},
+  publisher = {Elsevier},
+  abstract = {Artificial intelligence (AI) has the potential to play an important role in addressing the climate emergency, but this potential must be set against the environmental costs of developing AI systems. In this commentary, we assess the carbon footprint of AI training processes and offer 14 policy recommendations to reduce it.},
+  issn = {2590-3330}
+}
+
+@article{GreenAI,
+  author       = {Roy Schwartz and
+                  Jesse Dodge and
+                  Noah A. Smith and
+                  Oren Etzioni},
+  title        = {Green {AI}},
+  journal      = {CoRR},
+  volume       = {abs/1907.10597},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1907.10597},
+  eprinttype    = {arXiv},
+  eprint       = {1907.10597},
+  timestamp    = {Wed, 23 Dec 2020 10:13:20 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1907-10597.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DEFILIPPO2022109199,
+title = {HADA: An automated tool for hardware dimensioning of AI applications},
+journal = {Knowledge-Based Systems},
+volume = {251},
+pages = {109199},
+year = {2022},
+issn = {0950-7051},
+doi = {https://doi.org/10.1016/j.knosys.2022.109199},
+url = {https://www.sciencedirect.com/science/article/pii/S0950705122005974},
+author = {Allegra {De Filippo} and Andrea Borghesi and Andrea Boscarino and Michela Milano},
+keywords = {Empirical model learning, Hardware dimensioning, Anticipatory algorithms, Efficient energy management, Machine learning, Constrained optimization},
+}
+
+@article{LOMBARDI2017343,
+title = {Empirical decision model learning},
+journal = {Artificial Intelligence},
+volume = {244},
+pages = {343-367},
+year = {2017},
+note = {Combining Constraint Solving with Mining and Learning},
+issn = {0004-3702},
+doi = {https://doi.org/10.1016/j.artint.2016.01.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0004370216000126},
+author = {Michele Lombardi and Michela Milano and Andrea Bartolini},
+keywords = {Combinatorial optimization, Machine learning, Complex systems, Local search, Constraint programming, Mixed integer non-linear programming, SAT modulo theories, Artificial neural networks, Decision trees},
+}
+
+@inproceedings{ijcai2019p150,
+  title     = {How to Tame Your Anticipatory Algorithm},
+  author    = {De Filippo, Allegra and Lombardi, Michele and Milano, Michela},
+  booktitle = {Proceedings of the Twenty-Eighth International Joint Conference on
+               Artificial Intelligence, {IJCAI-19}},
+  publisher = {International Joint Conferences on Artificial Intelligence Organization},
+  pages     = {1071--1077},
+  year      = {2019},
+  month     = {7},
+  doi       = {10.24963/ijcai.2019/150},
+  url       = {https://doi.org/10.24963/ijcai.2019/150},
+}
+
+@inproceedings{10.1007/978-3-319-93031-2_8,
+author = {De Filippo, Allegra and Lombardi, Michele and Milano, Michela},
+title = {Off-Line and On-Line Optimization Under Uncertainty: A Case Study on Energy Management},
+year = {2018},
+isbn = {978-3-319-93030-5},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+url = {https://doi.org/10.1007/978-3-319-93031-2_8},
+doi = {10.1007/978-3-319-93031-2_8},
+booktitle = {Integration of Constraint Programming, Artificial Intelligence, and Operations Research: 15th International Conference, CPAIOR 2018, Delft, The Netherlands, June 26–29, 2018, Proceedings},
+pages = {100–116},
+numpages = {17},
+keywords = {Optimization, Uncertainty, Energy management},
+location = {Delft, The Netherlands}
+}
+
+@techreport{MicrosoftPwC2018,
+  title = {How AI can enable a sustainable future},
+  author = {{Microsoft} and {PwC}},
+  year = {2018},
+  institution = {Microsoft in association with PwC},
+  url = {https://www.pwc.co.uk/sustainability-climate-change/assets/pdf/how-ai-can-enable-a-sustainable-future.pdf},
+  note = {Accessed: 2024-10-30}
 }
