--- a/main.tex
+++ b/main.tex
@@ -17,14 +17,14 @@
 \setmainfont{Times New Roman}
 \begin{document}
 
-\title{Tensor-prolog: a logic programming framework for training neural networks}
-\topic{Applied Logic Programming}
-\candidate{John Smith}
-\supervisor{Prof.~Mario Rossi}
-%	\cosupervisor{& John Doe, PhD.} % One co-supervisor.
+\title{Hardware Dimensioning for Environmental Sustainability: benchmark of AI algorithms and environmental impact}
+\topic{Intelligent Systems}
+\candidate{Enrico Morselli}
+\supervisor{Prof.~Andrea Borghesi}
+\cosupervisor{& Allegra De Filippo, PhD.} % One co-supervisor.
 %	\cosupervisors{& Dott.~Ing.~Luigi Bianchi\\& Dott~Avv.~Lucia Rossi} % More than one co-supervisor.
-\academicyear{2020-2021}
-\session{1st}
+\academicyear{2024-2025}
+\session{5th}
 
 \frontispiece 
 \dedication{dedicated(X) :- friend(X).}
@@ -37,17 +37,13 @@
 
 \section{Background and Rationale}
 
-The adoption of Artificial Intelligence (AI) is growing rapidly, leading to the development of increasingly 
-complex models that demand significant computational resources. This growth results in high carbon emissions, 
-raising concerns about sustainability in AI research and deployment. Consequently, there is a need to monitor and 
-reduce the environmental impact of AI computations.
+Growing adoption of AI technologies
 
-In this thesis, we investigate the problem of optimizing hardware architecture selection and configuration for AI 
-algorithms while adhering to carbon emission constraints. An existing tool, 
-\href{https://www.sciencedirect.com/science/article/abs/pii/S0950705122005974}{HADA} 
-(HArdware Dimensioning of AI Algorithms), has previously tackled hardware dimensioning considering budget, runtime, 
-and solution quality constraints. Our work extends HADA by integrating carbon emission constraints, introducing the 
-concept of Sustainable Hardware Dimensioning. \cite{wielemaker2012swi}
+Growing energy requirements of AI models
+
+What we will do in this work
+
+"This thesis is structured as follows..."
 
 \chapter{Related Works}
 \section{Carbon Footprint in AI}
