some progress on the introduction section

--- a/biblio.bib
+++ b/biblio.bib
@@ -64,7 +64,7 @@ issn = {0950-7051},
 doi = {https://doi.org/10.1016/j.knosys.2022.109199},
 url = {https://www.sciencedirect.com/science/article/pii/S0950705122005974},
 author = {Allegra {De Filippo} and Andrea Borghesi and Andrea Boscarino and Michela Milano},
-keywords = {Empirical model learning, Hardware dimensioning, Anticipatory algorithms, Efficient energy management, Machine learning, Constrained optimization},
+keywords = {Empirical model learning, Hardware dimensioning, Anticipatory algorithms, Efficient energy management, Machine learning, Constrained optimization}
 }
 
 @article{LOMBARDI2017343,
@@ -78,7 +78,7 @@ issn = {0004-3702},
 doi = {https://doi.org/10.1016/j.artint.2016.01.005},
 url = {https://www.sciencedirect.com/science/article/pii/S0004370216000126},
 author = {Michele Lombardi and Michela Milano and Andrea Bartolini},
-keywords = {Combinatorial optimization, Machine learning, Complex systems, Local search, Constraint programming, Mixed integer non-linear programming, SAT modulo theories, Artificial neural networks, Decision trees},
+keywords = {Combinatorial optimization, Machine learning, Complex systems, Local search, Constraint programming, Mixed integer non-linear programming, SAT modulo theories, Artificial neural networks, Decision trees}
 }
 
 @inproceedings{ijcai2019p150,
@@ -91,7 +91,7 @@ keywords = {Combinatorial optimization, Machine learning, Complex systems, Local
   year      = {2019},
   month     = {7},
   doi       = {10.24963/ijcai.2019/150},
-  url       = {https://doi.org/10.24963/ijcai.2019/150},
+  url       = {https://doi.org/10.24963/ijcai.2019/150}
 }
 
 @inproceedings{10.1007/978-3-319-93031-2_8,
@@ -117,4 +117,33 @@ location = {Delft, The Netherlands}
   institution = {Microsoft in association with PwC},
   url = {https://www.pwc.co.uk/sustainability-climate-change/assets/pdf/how-ai-can-enable-a-sustainable-future.pdf},
   note = {Accessed: 2024-10-30}
+}
+
+@techreport{AIIndexReport,
+  author = {Nestor Maslej and Loredana Fattorini and Raymond Perrault and Vanessa Parli and Anka Reuel and Erik Brynjolfsson 
+            and John Etchemendy and Katrina Ligett and Terah Lyons and James Manyika and Juan Carlos Niebles and Yoav Shoham 
+            and Russell Wald and Jack Clark},
+  institution = {AI Index Steering Committee, Stanford University},
+  title = {The AI Index 2024 Annual Report},
+  year = {2024}
+}
+
+@misc{epoch2024compute,
+  title = {Training Compute of Frontier AI Models Grows by 4-5x per Year},
+  author = {Jaime Sevilla and Edu Roldán},
+  year = {2024},
+  url = {https://epoch.ai/blog/training-compute-of-frontier-ai-models-grows-by-4-5x-per-year},
+  note = {Accessed: 2025-03-03}
+}
+
+@article{patterson2021carbon,
+  author = {David A. Patterson and Joseph Gonzalez and Quoc V. Le and Chen Liang and Lluis-Miquel Munguia and 
+            Daniel Rothchild and David R. So and Maud Texier and Jeff Dean},
+  title = {Carbon Emissions and Large Neural Network Training},
+  journal = {CoRR},
+  volume = {abs/2104.10350},
+  year = {2021},
+  url = {https://arxiv.org/abs/2104.10350},
+  eprinttype = {arXiv},
+  eprint = {2104.10350}
 }
