--- a/main.tex
+++ b/main.tex
@@ -37,13 +37,40 @@
 
 \section{Background and Rationale}
 
-Growing adoption of AI technologies
+In recent years we have witnessed a dramatic increase in the performance of Artificial Intelligence technologies. Even if
+AI still fails to exeed human ability in some complex cognitive tasks, as of 2023 it has surpassed human capabilites in a
+range of tasks, such as image classification, basic reading comprehension, visual reasoning and natural language inference
+\cite{AIIndexReport}. Not to mention the astonishing results achieved by Generative AI in tasks as Image and Video Generation
+\cite{AIIndexReport}. This great advances in performance were made possible by a massive upscale of model sizes and 
+computational resources ("compute" in short) dedicated to training state-of-the-art AI models. Research shows that for 
+frontier AI models (i.e. those that were in the top 10 of training compute when they were released), the training compute has 
+grown by a factor of 4-5x/year since 2010 \cite{epoch2024compute}. This surge in required compute has driven a corresponding 
+spike in energy consumption for AI, and consequently, an higher environmental impact due to $\mathrm{CO_2}$ emissions.
+For instance, for trainining their LLaMA models, Meta AI researchers have estimated a period of approximately 5 months of 
+on $2048$ $\mathrm{A}100$ $80\mathrm{GB}$ GPUs, resulting in a total of $2,638 \mathrm{MWh}$ of energy and a total emission of 
+$1,015$ $\mathrm{tCO_2eq}$. Moreover, training is not the only source of emissions, has also the inference phase has a cost
+in terms of energy, not to talk about the embodied emissions resulting from the manifacturing of Hardware components. 
+The environmental impact of AI thus become a growing concern, with researchers beginning to sistematically reporting energy
+use and consequent $\mathrm{CO_2}$ emissions of their models. 
 
-Growing energy requirements of AI models
+In this work, we will explore an approach for addressing the issue of AI sustainability, by means of HADA (HArdware 
+Dimensioning for AI Algorithms), which is a framework that uses ML to learn the relationship between an algorithm 
+configuration and performance metrics, like total runtime, solution cost and memory usagem and then uses Optimization to find 
+the best  Hardware architecture and its configuration to run an algorithm under required performances and budget limits
+which is the problem known as Hardware Dimensioning \cite{DEFILIPPO2022109199}. What we will do is to extend this framework
+in order to consider also the performance of the algorithms in terms of Energy consumption and Carbon Emissions, so that, 
+ideally, we could find the best Algorithm and Hardware configuration that reduces the Carbon Footprint of computation. We 
+will then proceed to test this approach on some small-scale algorithms that we could easily execute in a timely manner 
+on local machines and HPC clusters.
 
-What we will do in this work
-
-"This thesis is structured as follows..."
+The rest of the work is structured as follows:
+\begin{itemize}
+    \item \textbf{Chapter 2} Introduces Related works that addressed the issue of AI's carbon footprint, and how Carbon Footprint is determined
+    \item \textbf{Chapter 3} Introduces some theoretical background about HADA, and explains the integration of the new metrics.
+    \item \textbf{Chapter 4} Presents the experimental setup and the results of the experiments
+    \item \textbf{Chapter 5} Presents the HADA framework, providing an overview of the tool
+    \item \textbf{Chapter 6} Presents the conclusions
+\end{itemize}
 
 \chapter{Related Works}
 \section{Carbon Footprint in AI}
