updated introduction and related works section

--- a/biblio.bib
+++ b/biblio.bib
@@ -147,3 +147,116 @@ location = {Delft, The Netherlands}
   eprinttype = {arXiv},
   eprint = {2104.10350}
 }
+
+@article{strubell2019energy,
+  author       = {Emma Strubell and
+                  Ananya Ganesh and
+                  Andrew McCallum},
+  title        = {Energy and Policy Considerations for Deep Learning in {NLP}},
+  journal      = {CoRR},
+  volume       = {abs/1906.02243},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1906.02243},
+  eprinttype    = {arXiv},
+  eprint       = {1906.02243},
+}
+
+@inproceedings{dodge2022carbon,
+author = {Dodge, Jesse and Prewitt, Taylor and Tachet des Combes, Remi and Odmark, Erika and Schwartz, Roy and Strubell, Emma and Luccioni, Alexandra Sasha and Smith, Noah A. and DeCario, Nicole and Buchanan, Will},
+title = {Measuring the Carbon Intensity of AI in Cloud Instances},
+year = {2022},
+isbn = {9781450393522},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3531146.3533234},
+booktitle = {Proceedings of the 2022 ACM Conference on Fairness, Accountability, and Transparency},
+pages = {1877–1894},
+location = {Seoul, Republic of Korea},
+series = {FAccT '22}
+}
+
+@misc{touvron2023llama,
+author={Hugo Touvron, Thibaut Lavril, Gautier Izacard, Xavier Martinet, Marie-Anne Lachaux, Timothée Lacroix, Baptiste Rozière, Naman Goyal, Eric Hambro, Faisal Azhar, Aurelien Rodriguez, Armand Joulin, Edouard Grave, Guillaume Lample},
+title={LLaMA: Open and Efficient Foundation Language Models}, 
+author={Hugo Touvron and Thibaut Lavril and Gautier Izacard and Xavier Martinet and Marie-Anne Lachaux and Timothée Lacroix and Baptiste Rozière and Naman Goyal and Eric Hambro and Faisal Azhar and Aurelien Rodriguez and Armand Joulin and Edouard Grave and Guillaume Lample},
+year={2023},
+eprint={2302.13971},
+archivePrefix={arXiv},
+primaryClass={cs.CL},
+url={https://arxiv.org/abs/2302.13971}, 
+}
+
+@article{henderson2020carbon,
+  author  = {Peter Henderson and Jieru Hu and Joshua Romoff and Emma Brunskill and Dan Jurafsky and Joelle Pineau},
+  title   = {Towards the Systematic Reporting of the Energy and Carbon Footprints of Machine Learning},
+  journal = {Journal of Machine Learning Research},
+  year    = {2020},
+  volume  = {21},
+  number  = {248},
+  pages   = {1--43},
+  url     = {http://jmlr.org/papers/v21/20-312.html}
+}
+
+@article{gupta2020carbon,
+  author       = {Udit Gupta and
+                  Young Geun Kim and
+                  Sylvia Lee and
+                  Jordan Tse and
+                  Hsien{-}Hsin S. Lee and
+                  Gu{-}Yeon Wei and
+                  David Brooks and
+                  Carole{-}Jean Wu},
+  title        = {Chasing Carbon: The Elusive Environmental Footprint of Computing},
+  journal      = {CoRR},
+  volume       = {abs/2011.02839},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2011.02839},
+  eprinttype    = {arXiv},
+  eprint       = {2011.02839}
+}
+
+@article{wu2021sustainableai,
+  author       = {Carole{-}Jean Wu and
+                  Ramya Raghavendra and
+                  Udit Gupta and
+                  Bilge Acun and
+                  Newsha Ardalani and
+                  Kiwan Maeng and
+                  Gloria Chang and
+                  Fiona Aga Behram and
+                  James Huang and
+                  Charles Bai and
+                  Michael Gschwind and
+                  Anurag Gupta and
+                  Myle Ott and
+                  Anastasia Melnikov and
+                  Salvatore Candido and
+                  David Brooks and
+                  Geeta Chauhan and
+                  Benjamin Lee and
+                  Hsien{-}Hsin S. Lee and
+                  Bugra Akyildiz and
+                  Maximilian Balandat and
+                  Joe Spisak and
+                  Ravi Jain and
+                  Mike Rabbat and
+                  Kim M. Hazelwood},
+  title        = {Sustainable {AI:} Environmental Implications, Challenges and Opportunities},
+  journal      = {CoRR},
+  volume       = {abs/2111.00364},
+  year         = {2021},
+  url          = {https://arxiv.org/abs/2111.00364},
+  eprinttype    = {arXiv},
+  eprint       = {2111.00364}
+}
+
+@article{thompson2021deeplearning,
+title = {Deep Learning's Diminishing Returns: The Cost of Improvement is Becoming Unsustainable},
+author =  {Thompson, {Neil C.} and Kristjan Greenewald and Keeheon Lee and Manso, {Gabriel F.} },
+year = {2021},
+volume = {58},
+pages = {50--55},
+journal = {IEEE Spectrum},
+issn = {0018-9235},
+publisher = {Institute of Electrical and Electronics Engineers Inc.}
+}
